# epic_events

./: .coverage  .env  .env.exemple  .flake8  .gitignore  Readme.md  pyproject.toml
epic_events/: .coverage  database.py  main.py  models.py  test.db  token.txt
epic_events/events/: commercial_commands.py  events_commands.py  gestion_commands.py  support_commands.py
epic_events/tests/: conftest.py  test_commercials.py  test_gestions.py  test_support.py  test_users.py
epic_events/users/: users_commands.py
